# pysfml3

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
examples/: basic_mouse.py  basic_window.py
src/: Event.cpp  Font.cpp  Keyboard.cpp  Mouse.cpp  Text.cpp  graphics_bindings.cpp  pysfml.cpp  system_bindings.cpp  window_bindings.cpp
